--- a/Frontend/templates/login.html
+++ b/Frontend/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Login - ShopEasy{% endblock %}
+{% block title %}Login - ElectroCart{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
