--- a/Frontend/templates/product_detail.html
+++ b/Frontend/templates/product_detail.html
@@ -59,19 +59,19 @@
     <div class="col-12">
         <h3>Related Products</h3>
         <div class="d-flex flex-row overflow-auto">
-            {% for i in range(1, 6) %}
+            {% for rp in related_products %}
             <div class="card me-3" style="width: 250px; flex: 0 0 auto;">
-                <img src="{{ url_for('static', filename='images/' ~ product.image) }}"
-                    alt="{{ product.name }}"
+                <img src="{{ url_for('static', filename='images/' ~ rp.image) }}"
+                    alt="{{ rp.name }}"
                     class="card-img-top"
                     style="height: 200px; object-fit: cover;" />
                 <div class="card-body">
-                    <h5 class="card-title">Related Product {{ i }}</h5>
-                    <p class="card-text text-primary fw-bold">$199.99</p>
-                    <a href="#" class="btn btn-outline-primary">View Details</a>
+                    <h5 class="card-title">{{ rp.name }}</h5>
+                    <p class="card-text text-primary fw-bold">${{ rp.price }}</p>
+                    <a href="{{ url_for('product_detail', product_id=rp.id) }}" class="btn btn-outline-primary">View Details</a>
                 </div>
-       </div>
-        {% endfor %}
+            </div>
+            {% endfor %}
         
     </div>
 </div>
